Main page actualizada:D

--- a/index.html
+++ b/index.html
@@ -12,14 +12,33 @@
     <div class="titulo">
         <h2>blurry Blog</h2>
     </div>
-    <div class="contenedor"> 
+    <div class="navbar">
     <nav>
-        <p>About me</p>
-        <p>Contacto</p>
-        <p>Blogs</p>
+        <a href="https://blurryggg.github.io/Contacto/"><div class="boutme">
+       About me
+    </div></a>
+    <a href="https://blurryggg.github.io/Contacto/">
+    <div class="contacto">    
+    Contacto
+    </div>
+    </a>
+    <a href="">
+    <div class="Blogs">
+        Blogs
+    </div>
+    </a>
     </nav>
-    <p>Hola!, creo que este es el primer vistazo de la pagina pero al dia de hoy tengo 15 años y estoy a punto de hacer una blog:D, acompañame en esta travesia</p>
-     
+</div>
+    <div class="contenedor"> 
+    <div class="text">
+    <p>Hola!, creo que este es el primer vistazo de la pagina pero al dia 
+        de hoy tengo 15 años y estoy a punto de hacer una blog:D, acompañame 
+        en esta travesia, quedate pendiente de esta pagina que estoy a punto 
+        de actualizar todo su contenido:D, te preguntaras de que tratara este blog
+        pues ni yo lo se:'c, solo se que estoy pensando en dejar anecdotas mias o simplemente 
+        contar como me ha ido en la semana:D, oh no, spoiler, (si, este sitio se actualizara cada semana)
+        asi que ponte comodo y espera a que esta pagina se llene de mis aventuras:D</p>
+</div>
 
 </div>
 </body>
