--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
-    <title>Gabe</title>
+    <link rel="icon" type="image/png" href="logo_transparent.png">
+    <title>blurry's life</title>
 </head>
 <body>
     <div class="titulo">
@@ -22,7 +23,7 @@
     Contacto
     </div>
     </a>
-    <a href="">
+    <a href="blog/blogsr/primerpagina/blog1.html">
     <div class="Blogs">
         Blogs
     </div>
