Error de publicacion

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     Contacto
     </div>
     </a>
-    <a href="blogsr/primerpagina/blog1.html">
+    <a href="https://blurryggg.github.io/blog/blogsr/primerpagina/blog1.html">
     <div class="Blogs">
         Blogs
     </div>
